--- a/consignment-service/Dockerfile
+++ b/consignment-service/Dockerfile
@@ -10,8 +10,8 @@ ENV GO111MODULE=on
 
 COPY . .
 
-RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o consignment-service
+RUN go get
+RUN CGO_ENABLED=0 GOOS=linux go build -o consignment-service -a -installsuffix cgo 
 
 # Run container
 FROM alpine:latest
