--- a/vessel-service/makefile
+++ b/vessel-service/makefile
@@ -1,7 +1,7 @@
 build:
 	protoc -I. --go_out=plugins=micro:. \
     proto/vessel/vessel.proto
-	docker build -t shippy-vessel-service .
+	docker build -t vessel-service .
 
 run:
-	docker run -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 shippy-vessel-service
+	docker run -p 50052:50051 -e MICRO_SERVER_ADDRESS=:50051 vessel-service
